[7.17] Allow to set the security manager (#82053)