@@ -99,6 +99,9 @@ public class ElasticsearchTestBasePlugin implements Plugin<Project> {
                             "--add-opens=java.management/java.lang.management=ALL-UNNAMED"
                         );
                     }
+                    if (BuildParams.getRuntimeJavaVersion().isCompatibleWith(JavaVersion.VERSION_18)) {
+                        test.jvmArgs("-Djava.security.manager=allow");
+                    }
                 }
             });
             test.getJvmArgumentProviders().add(nonInputProperties);
